recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:3: error: not found: value dises
    for (1<-0 to dises-1) {
                 ^