recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  if (levels==1) {
    for (1<-0 to dises-1) {
    avance(length) ; droite(360/sides)
  }
  }  
  else {
    polygonFractal(levels-1,sides,length*shrink,shrink) ; gauche(360/sides)
    polygonFractal(levels-1,sides,length*shrink,shrink) ; droite(180)
    polygonFractal(levels-1,sides,length*shrink,shrink) ; 
  }
}